--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(FILE_DESCRIPTION "AltTaber - Window Switcher")
 set(PRODUCT_NAME "AltTaber")
 # 设置图标的相对路径
 # 图标会被缓存，修改后不生效的话，需要删除AppData\Local\IconCache.db & 重启资源管理器
-set(ICON_PATH "${CMAKE_CURRENT_SOURCE_DIR}/img/icon-w.ico")
+set(ICON_PATH "${CMAKE_CURRENT_SOURCE_DIR}/img/icon.ico")
 
 set(VERSIONINFO_RC "${CMAKE_CURRENT_BINARY_DIR}/VersionInfo.rc")
 # 处理.in模板文件 生成版本信息文件
