feat: Singleton Application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,8 @@ add_executable(Win_Switcher src/main.cpp
         header/utils/TaskbarWheelHooker.h
         src/utils/QtWin.cpp
         header/utils/QtWin.h
-        header/utils/ComInitializer.h)
+        header/utils/ComInitializer.h
+        header/utils/SingleApp.h)
 target_link_libraries(Win_Switcher
         Qt::Core
         Qt::Gui
